--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.biryanistudio.tatvaapp"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 5
-        versionName "2.0"
+        versionCode 6
+        versionName "1"
     }
     buildTypes {
         release {
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
